--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,17 +8,18 @@
     </div>
 
     <div class="panel-body">
-      <form class="form-horizontal m-t-20" action="index.html">
+      <form class="form-horizontal m-t-20" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
 
         <div class="form-group ">
           <div class="col-xs-12">
-            <input class="form-control" type="text" required="" placeholder="Tên đăng nhập">
+            <input name="username" class="form-control" [(ngModel)]="model.username" #username="ngModel" type="text" required="" placeholder="Tên đăng nhập">
           </div>
         </div>
 
         <div class="form-group">
           <div class="col-xs-12">
-            <input class="form-control" type="password" required="" placeholder="Mật khẩu">
+            <input name="password" class="form-control" [(ngModel)]="model.password" #password="ngModel" type="password" required=""
+              placeholder="Mật khẩu">
           </div>
         </div>
 
@@ -27,7 +28,7 @@
             <div class="checkbox checkbox-primary">
               <input id="checkbox-signup" type="checkbox">
               <label for="checkbox-signup">
-                                Nhớ tài khoản
+                  Nhớ tài khoản
               </label>
             </div>
           </div>
@@ -40,7 +41,7 @@
 
         <div class="form-group m-t-30 m-b-0">
           <div class="col-sm-12">
-            <a href="page-recoverpw.html" class="text-dark"><i class="fa fa-lock m-r-5"></i> Quên mật khẩu?</a>
+            <a [routerLink]="['/recover-password']" class="text-dark"><i class="fa fa-lock m-r-5"></i> Quên mật khẩu?</a>
           </div>
         </div>
       </form>
