--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,4 @@
+<ng2-toasty [position]="'top-right'"></ng2-toasty>
 <div class="card-box table-responsive">
   <div class="row">
     <div class="col-md-6">
@@ -82,12 +83,10 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="exampleInputEmail1">Khoa</label>
+            <label for="exampleInputEmail1">Tổ chức</label>
             <div class="input-group">
               <select class="selectpicker" data-style="btn-white">
-                           <option value="">Công nghệ thông tin</option>
-                           <option value="">Công nghệ chế tạo máy</option>
-                           <option value="">Ngoại ngữ</option>
+                <option *ngFor="let org of orgs" value="{{org.id}}">{{org.name}}</option>
               </select>
 
               <span class="input-group-addon bg-custom b-0 text-white"><i class="fa fa-university"></i></span>
