--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -82,28 +82,54 @@
               <span class="input-group-addon bg-custom b-0 text-white"><i class="fa fa-key"></i></span>
             </div>
           </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Tổ chức</label>
-            <div class="input-group">
-              <select class="selectpicker" data-style="btn-white">
+          <div class="row">
+            <div class="col-md-5 col-xs-5">
+              <div class="form-group">
+                <label>Tổ chức</label>
+
+                <select [(ngModel)]="dataRole.orgId" name="orgId" class="form-control selectpicker" data-style="btn-white">
                 <option *ngFor="let org of orgs" value="{{org.id}}">{{org.name}}</option>
               </select>
 
-              <span class="input-group-addon bg-custom b-0 text-white"><i class="fa fa-university"></i></span>
+              </div>
             </div>
-          </div>
-
-          <div class="form-group">
-            <label for="status">Quyền</label>
-
-            <select class="selectpicker" data-style="btn-white">
-                           <option value="">Sinh viên</option>
-                           <option value="">Admin</option>
-                           <option value="">Cán bộ đoàn</option>
+            <div class="col-md-5 col-xs-5">
+              <div class="form-group">
+                <label for="status">Vai trò</label>
+                <select [(ngModel)]="dataRole.roleId" name="roleId" class="form-control selectpicker" data-style="btn-white">
+                           <option *ngFor="let role of roles" value="{{role.id}}">{{role.name}}</option>
+                          
                        </select>
+              </div>
+            </div>
+            <div class="col-md-2 col-xs-2">
+              <div class="form-group" style="padding-top: 24px">
+                <button type="button" (click)="addRole()" class="btn btn-primary form-control">
+                  Thêm
+              </button>
+              </div>
+            </div>
+            <hr>
+
           </div>
-
-
+          <div class="row" *ngIf="dataRoles.length>0">
+            <table class="table m-0">
+              <thead>
+                <tr>
+                  <th>STT</th>
+                  <th>Tổ chức</th>
+                  <th>Vai trò</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let roleSelected of dataRoles">
+                  <th scope="row">{{index}}</th>
+                  <td>{{getOrgName(roleSelected.orgId)}}</td>
+                  <td>{{getRoleName(roleSelected.roleId)}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <button type="submit" class="btn btn-default waves-effect waves-light">Lưu</button>
           <button type="button" class="btn btn-danger waves-effect waves-light m-l-10" (click)="lgModal.hide()">Hủy</button>
         </form>
