--- a/src/app/users/components/edit-user/edit-user.component.html
+++ b/src/app/users/components/edit-user/edit-user.component.html
@@ -3,44 +3,51 @@
     <ng2-toasty [position]="'top-right'"></ng2-toasty>
     <div class="custom-modal-text text-left">
       <form role="form" #f="ngForm" novalidate>
-        <div class="form-group">
-          <label for="name">Tên đăng nhập</label>
-          <div class="input-group">
-            <input type="text" name="username" class="form-control" [ngClass]="{ 'parsley-error': f.submitted}" [(ngModel)]="user.username"
-              id="username" placeholder="Nhập tên đăng nhập">
-            <span class="input-group-addon bg-custom b-0 text-white"><i class="fa fa-user"></i></span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="name">Họ tên</label>
-          <div class="input-group">
-            <input type="text" name="name" class="form-control" [ngClass]="{ 'parsley-error': f.submitted}" [(ngModel)]="user.name" id="name"
-              placeholder="Nhập họ tên">
-            <span class="input-group-addon bg-custom b-0 text-white"><i class="fa fa-user"></i></span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email</label>
-          <div class="input-group">
-            <input type="text" class="form-control" name="email" placeholder="Nhập email" [ngClass]="{ 'parsley-error': f.submitted }"
-              [(ngModel)]="user.email">
-            <span class="input-group-addon bg-custom b-0 text-white">
-                <i class="fa fa-envelope"></i>
-                </span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Mật khẩu</label>
-          <div class="input-group">
-            <input [(ngModel)]="user.password" name="password" type="password" class="form-control" placeholder="Nhập mật khẩu">
-            <span class="input-group-addon bg-custom b-0 text-white"><i class="fa fa-key"></i></span>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="username" class="col-md-4 col-sm-4">Tên đăng nhập</label>
+              <div class="col-md-8 col-sm-8">
+                <inline-editor type="text" [(ngModel)]="user.username" (onSave)="updateUser($event)" name="username"></inline-editor>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="name" class="col-md-4 col-sm-4">Họ tên</label>
+              <div class="col-md-8 col-sm-8">
+                <inline-editor type="text" [(ngModel)]="user.name" (onSave)="updateUser($event)" name="name"></inline-editor>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="email" class="col-md-4 col-sm-4">Email</label>
+              <div class="col-md-8 col-sm-8">
+                <inline-editor type="text" [(ngModel)]="user.email" (onSave)="updateUser($event)" name="email"></inline-editor>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="password" class="col-md-4 col-sm-4">Mật khẩu</label>
+              <div class="col-md-8 col-sm-8">
+                <inline-editor type="password" [(ngModel)]="user.password" (onSave)="updateUser($event)" name="password"></inline-editor>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
           <div class="col-md-5 col-xs-5">
             <div class="form-group">
-              <label>Tổ chức</label>
-
+              <label class="col-md-3 col-sm-3">Tổ chức</label>
               <select #selectedOrg name="orgId" class="form-control selectpicker" data-style="btn-white">
                 <option *ngFor="let org of orgs" value="{{org.id}}">{{org.name}}</option>
               </select>
@@ -90,7 +97,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <button (click)="createUser()" type="button" class="btn btn-default waves-effect waves-light">Lưu</button>
+            <button (click)="updateUser()" type="button" class="btn btn-default waves-effect waves-light">Lưu</button>
             <button (click)="redirect(users)" class="btn btn-danger waves-effect waves-light m-l-10">Hủy</button>
           </div>
         </div>
