Phan quyen in client

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,15 +21,6 @@
                                 </button>
           <span class="clearfix"></span>
         </div>
-
-
-
-        <form role="search" class="navbar-left app-search pull-left hidden-xs">
-          <input type="text" placeholder="Search..." class="form-control">
-          <a href=""><i class="fa fa-search"></i></a>
-        </form>
-
-
         <ul class="nav navbar-nav navbar-right pull-right">
           <li class="dropdown top-menu-item-xs">
             <a href="#" data-target="#" class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" aria-expanded="true">
@@ -150,7 +141,7 @@
               <li class="divider"></li>
 
               <li *ngFor="let permission of permissions">
-                <a href="javascript:void(0)" (click)="setOrganization(permission.organization.id)">
+                <a (click)="setOrganization(permission.organization.id)">
                 <i class="m-r-10 text-danger "></i> 
                 {{permission.organization.name}}
                 </a>
