--- a/src/app/activity/components/point/point.component.html
+++ b/src/app/activity/components/point/point.component.html
@@ -12,8 +12,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12">
-            <table id="usersDataTable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="usersDataTable_info"
-              style="width: 951px;">
+            <table id="usersDataTable" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="usersDataTable_info">
               <thead>
                 <tr role="row">
                   <th class="sorting_asc" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="ID: activate to sort column descending"
