--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -148,7 +148,7 @@
               </li>
               <li class="divider "></li>
               <li>
-                <a href="javascript:void(0) ">
+                <a (click)="logout()">
                 <i class="ti-power-off m-r-10 text-danger "></i> 
                 Đăng xuất
                 </a>
