Phan trang, xoa hoat dong

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -43,7 +43,7 @@
                </a>
               <ul class="list-unstyled">
                 <li><a [routerLink]="['/cbd/activities']">Danh sách hoạt động</a></li>
-                <li><a [routerLink]="['/cbd/create-activity']">Tạo hoạt động</a></li>
+                <li><a [routerLink]="['/cbd/activities/new']">Tạo hoạt động</a></li>
               </ul>
             </li>
             <li class="has_sub">
