--- a/src/app/activity/activity.component.html
+++ b/src/app/activity/activity.component.html
@@ -19,9 +19,6 @@
 										    <input type="checkbox" autocomplete="off"> Tên
 										 </label>
         <label class="btn btn-white btn-md waves-effect active">
-										    <input type="checkbox" autocomplete="off"> Trạng thái
-										 </label>
-        <label class="btn btn-white btn-md waves-effect active">
 										    <input type="checkbox" autocomplete="off" checked="true"> Chờ duyệt
                         <span class="label label-pink">{{countActivities}}</span>
 										 </label>
@@ -36,7 +33,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <div class="card-box m-b-10" *ngFor="let activity of activities">
+    <div class="card-box m-b-10" *ngFor="let activity of activities | paginate: { id: 'server', itemsPerPage: paging.perPage, currentPage: paging.currentPage+1, totalItems: paging.total }">
       <div class="table-box opport-box">
         <div class="table-detail">
           <img src="../../assets/images/brand/envato.jpg" alt="img" class="img-circle thumb-lg m-r-15" />
@@ -47,7 +44,7 @@
                       <a href="/activities/{{activity.id}}">{{activity.name}}</a>
               </b></h4>
             <ng-template [ngIf]="isFullPermission()">
-              <p class="text-dark m-b-5"><b>Chi doan: </b> <span class="text-muted">{{activity.organization.name}}</span></p>
+              <p class="text-dark m-b-5"><b>Tổ chức: </b> <span class="text-muted">{{activity.organization.name}}</span></p>
             </ng-template>
             <ng-template [ngIf]="!isFullPermission()">
               <p class="text-dark m-b-5"><b>Ngày tạo: </b> <span class="text-muted">{{activity.createdDate}}</span></p>
@@ -68,8 +65,31 @@
           <ng-template [ngIf]="isFullPermission()">
             <a (click)="confirm(activity,activity.confirmed?false:true)" class="btn btn-sm waves-effect waves-light" [ngClass]="activity.confirmed?'btn-info':'btn-danger'">{{activity.confirmed?"Hủy duyệt":"Duyệt"}} </a>
           </ng-template>
-          <a (click)="delete(activity.id)" class="btn btn-sm btn-danger">Xóa</a>
+          <a (click)="showModal(activity)" class="btn btn-sm btn-danger">Xóa</a>
         </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+<div class="row" style="padding-top: 20px">
+  <div class="col-lg-12 col-md-12">
+    <div style="text-align: center">
+      <div class="spinner" [ngClass]="{ 'hidden': !loading }"></div>
+      <pagination-controls class="pagination" (pageChange)="getPage($event)" id="server"></pagination-controls>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" bsModal #orgModal="bs-modal" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-md">
+    <div class="modal-content" style="padding:0;border-color: none">
+      <h4 class="custom-modal-title">Xóa hoạt động</h4>
+      <div class="custom-modal-text text-left">
+        <h3>Bạn có muốn xóa hoạt động này không?</h3>
+        <button type="button" (click)="delete(currentActivity.id)" class="btn btn-default waves-effect waves-light">Lưu</button>
+        <button type="button" class="btn btn-danger waves-effect waves-light m-l-10" (click)="hideModal()">Hủy</button>
       </div>
     </div>
   </div>
