--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -11,10 +11,10 @@
       </form>
     </div>
     <div class="col-md-6">
-      <a [routerLink]="getRouter()" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right" data-animation="fadein"
-        data-plugin="custommodal" data-overlayspeed="200" data-overlaycolor="#36404a">
+      <a *ngIf="!isStudent()" [routerLink]="getRouter()" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right"
+        data-animation="fadein" data-plugin="custommodal" data-overlayspeed="200" data-overlaycolor="#36404a">
                                 <i class="md md-add"></i> Thêm mới</a>
-      <div class="h5 m-0">
+      <div class="h5 m-0" *ngIf="!isStudent()">
         <div class="btn-group vertical-middle" data-toggle="buttons">
           <label class="btn btn-white btn-md waves-effect">
 										    <input type="checkbox" autocomplete="off"> Tên
@@ -73,7 +73,6 @@
         </div>
       </div>
     </div>
-
   </div>
   <div class="row" style="padding-top: 20px">
     <div class="col-lg-12 col-md-12">
