--- a/src/app/pages/member/activity-management/activity-management.component.html
+++ b/src/app/pages/member/activity-management/activity-management.component.html
@@ -9,9 +9,6 @@
     </form>
   </div>
   <div class="col-md-6">
-    <a class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right" data-animation="fadein" data-plugin="custommodal"
-      data-overlayspeed="200" data-overlaycolor="#36404a">
-                                <i class="md md-add"></i> Thêm mới</a>
     <div class="h5 m-0">
       <div class="btn-group vertical-middle" data-toggle="buttons">
         <label class="btn btn-white btn-md waves-effect">
@@ -31,6 +28,10 @@
 
 <div class="row">
   <div class="col-lg-12">
+    <div *ngIf="isEmpty()" style="text-align: center">
+      <h3>Bạn chưa đăng ký tham gia hoạt động nào!</h3>
+    </div>
+
     <div class="card-box m-b-10" *ngFor="let register of registers">
       <div class="table-box opport-box">
         <div class="table-detail">
