--- a/src/app/pages/member/point-management/point-management.component.html
+++ b/src/app/pages/member/point-management/point-management.component.html
@@ -1,20 +1,21 @@
 <div class="card-box table-responsive">
   <div class="row">
-    <div class="col-md-6">
-      <p>
-      </p>
-      <h2 style="display:inline">
-        Điểm CTXH
-      </h2>
-      <span class="label label-pink">11</span>
-      <p></p>
-      <b class="m-l-40"> Điểm rèn luyện</b>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-4">
+          <h3> Điểm CTXH </h3>
 
-      <span class="label label-pink">11</span>
+          <span class="label label-pink">{{point.tranning}}</span>
+        </div>
+        <div class="col-md-4">
+          <h3 class="m-l-40"> Điểm rèn luyện</h3>
 
-      <br><br>
+          <span class="label label-pink">{{point.social}}</span>
+        </div>
+      </div>
     </div>
   </div>
+  <br>
   <div class="col-lg-12">
     <div id="usersDataTable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
       <div class="row">
@@ -35,7 +36,7 @@
                 <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Tên hoạt động: activate to sort column ascending"
                   style="width: 186px;">Tên hoạt động</th>
                 <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Tên hoạt động: activate to sort column ascending"
-                  style="width: 186px;">Tên to chuc</th>
+                  style="width: 186px;">Tên tổ chức</th>
                 <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Ngày diễn ra: activate to sort column ascending"
                   style="width: 166px;">Ngày diễn ra</th>
                 <th class="sorting" tabindex="0" aria-controls="usersDataTable" rowspan="1" colspan="1" aria-label="Điểm CTXH: activate to sort column ascending"
@@ -52,6 +53,11 @@
                 <td>{{register.activity.startDate}}</td>
                 <td>{{register.pointSocial}}</td>
                 <td>{{register.pointTranning}}</td>
+              </tr>
+              <tr *ngIf="isEmpty()">
+                <td colspan="6" style="text-align: center">
+                  <b style="font-size: 16pt">Bạn chưa tham gia hoạt động nào</b>
+                </td>
               </tr>
             </tbody>
           </table>
